[package]
name = "esp-at-driver"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"
description = "Rust driver that runs on the main processor and communicates to an ESP32 coprocessor running the AT firmware."
keywords = ["embedded-hal-driver", "wifi"]
repository = "https://github.com/rukai/esp-at-driver"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.5"
heapless = "0.6.1"
nb = "1.0.0"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
