[package]
name = "esp-at-driver"
version = "0.1.0"
authors = ["Rukai <rubickent@gmail.com>"]
edition = "2018"
description = "Rust async driver that runs on the main processor and communicates to an ESP32 coprocessor running the AT firmware."
keywords = ["esp", "esp32", "esp8266", "driver", "wifi"]
categories = ["embedded", "no-std", "asynchronous"]
repository = "https://github.com/rukai/esp-at-driver"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-traits = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "ccfcacaaa73634301f078448440c7414c28ea483", features = [] }
embassy = { version = "0.1.0", git = "https://github.com/embassy-rs/embassy", rev = "ccfcacaaa73634301f078448440c7414c28ea483", features = [] }
heapless = "0.7"
